--- a/app/src/main/res/layout/homepage_fragment.xml
+++ b/app/src/main/res/layout/homepage_fragment.xml
@@ -45,25 +45,25 @@
         android:orientation="horizontal"
         >
 
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:layout_weight="1" />
 
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn4"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -76,25 +76,25 @@
         android:orientation="horizontal"
 
         >
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn5"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn6"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn7"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             />
-        <com.android.zzw.generalaffairs.ButtonView
+        <com.android.zzw.generalaffairs.view.ButtonView
             android:id="@+id/btn8"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
